2006-04-14  Atsushi Enomoto  <atsushi@ximian.com>

	* README: removed obsolete info.
	* Normalization.cs : canonical reordering should participate in the
	  decomposition step. In reordering, string append was incomplete.
	  Combining class check is required in NFD check. Icall is written
	  using IntPtr now.

2005-12-07  Zoltan Varga  <vargaz@gmail.com>

	* SimpleCollator.cs: Fix a warning.

2005-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* SimpleCollator.cs: Fix CAS support. The static ctor/var try to get 
	the environment variable MUCH too soon (i.e. the security manager 
	needs the collator).

2005-11-29  Atsushi Enomoto  <atsushi@ximian.com>

	* SimpleCollator.cs : direct fast-path optimization for IndexOf().

2005-11-29  Atsushi Enomoto  <atsushi@ximian.com>

	* SimpleCollator.cs :
	  - CompareQuick(): added immediateBreakup to avoid extraneous sortkey
	    computation.
	  - QuickCheckPossible(): index used for s1 was incorrect.

2005-11-29  Atsushi Enomoto  <atsushi@ximian.com>

	* SimpleCollator.cs : added another quick check for CompareInternal()
	  that does almost ordinal comparison for quick-checkable strings.
	  (It affects on Compare(), IndexOf(), IsSuffix() etc. as well.)

2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>

	* MSCompatUnicodeTable.cs : (IsIgnorable) \0 is not ignorable.
	  Fixed bug 76702.

2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>

	* SimpleCollator.cs :
	  Created another struct to reduce method arguments. Created another
	  flags that keeps "once-matched" state (counterpart of
	  checkedFlags, now neverMatchFlags).

2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>

	* SimpleCollator.cs :
	  - Added CompareOrdinalIgnoreCase() for NET_2_0 RTM.
	  - Reduced extra parameter from LastIndexOfSortKey().
	  - LastIndexOf() should use GetTailContraction for the source string.
	    And then, target could match in the middle of the possible
	    "replacement contraction" of the source string, so use